# market_simulator

./: .gitignore  CMakeLists.txt
headers/: Candlestick.hpp  Order.hpp  OrderBook.hpp  Trader.hpp  marketSim.hpp
src/: Order.cpp  OrderBook.cpp  Trader.cpp  main.cpp  marketSim.cpp
